package com.awrs.model;

public enum Role {
    ADMIN,
    MANAGER,
    WORKER
}
